--- a/Practica3/Practica3/Practica3.csproj
+++ b/Practica3/Practica3/Practica3.csproj
@@ -8,10 +8,11 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>Practica3</RootNamespace>
     <AssemblyName>Practica3</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,6 +34,27 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="QlmLicenseLib">
+      <HintPath>..\SimioAPI\QlmLicenseLib.dll</HintPath>
+    </Reference>
+    <Reference Include="SimioAPI">
+      <HintPath>..\SimioAPI\SimioAPI.dll</HintPath>
+    </Reference>
+    <Reference Include="SimioAPI.Extensions">
+      <HintPath>..\SimioAPI\SimioAPI.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="SimioAPI.Graphics">
+      <HintPath>..\SimioAPI\SimioAPI.Graphics.dll</HintPath>
+    </Reference>
+    <Reference Include="SimioDLL">
+      <HintPath>..\SimioAPI\SimioDLL.dll</HintPath>
+    </Reference>
+    <Reference Include="SimioEnums">
+      <HintPath>..\..\..\..\..\Desktop\DemoModela1\DemoModela1\SimioEnums.dll</HintPath>
+    </Reference>
+    <Reference Include="SimioTypes">
+      <HintPath>..\SimioAPI\SimioTypes.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,6 +68,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Factory\Link.cs" />
+    <Compile Include="Factory\Node.cs" />
+    <Compile Include="Factory\Path.cs" />
+    <Compile Include="Factory\Server.cs" />
+    <Compile Include="Factory\SimioElement.cs" />
+    <Compile Include="Factory\SimioFacade.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -65,6 +93,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -78,6 +107,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\FileStore\FileStore.csproj">
+      <Project>{5f1bf93c-57d5-49ce-9a08-ff315723626e}</Project>
+      <Name>FileStore</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
