--- a/Practica3/FileStore/FileStore.csproj
+++ b/Practica3/FileStore/FileStore.csproj
@@ -49,7 +49,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\BaseModel.spfx" />
+    <None Include="Resources\[MYS1]ModeloBase_P37.spfx" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resource.resx">
