# Se grafico carnet 201504420

--- a/Practica3/Practica3/Practica3.csproj
+++ b/Practica3/Practica3/Practica3.csproj
@@ -68,6 +68,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Factory\Draw\NumberCreator.cs" />
     <Compile Include="Factory\Link.cs" />
     <Compile Include="Factory\BasicNode.cs" />
     <Compile Include="Factory\Path.cs" />
