Lectura Archivo CSV de Coordenadas

--- a/Practica3/FileStore/FileStore.csproj
+++ b/Practica3/FileStore/FileStore.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\BaseModel.spfx" />
+    <None Include="Resources\Coordinates.csv" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resource.resx">
